css/header.css
#header {
	margin-top: 5px;
	height: 210px;
	display: flex;
	flex-direction: row;
	align-items: center;
}

#header>div:first-child {
	margin-right: auto;
	visibility: hidden;
	width: 600px;
}

#header img {
	width: 600px;
	height: 200px;
	margin: 0;
	padding: 5px;
}

#header #logoright {
	margin: 0;
	padding: 0;
	margin-left: auto;
	width: 100px;
}

